servers/server0/node-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: screepspl.us/server
                operator: In
                values:
                - server0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: screeps
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: screepspl.us/server
                operator: In
                values:
                - server0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toolbox
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: screepspl.us/server
                operator: In
                values:
                - server0
