servers/server0/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
spec:
  rules:
  - host: test.server0.screepspl.us
    type: Prefix
    http:
      paths:
      - backend:
          service:
            name: screeps
            port: 
              name: http
  - host: server0.screepspl.us
    type: Prefix
    http:
      paths:
      - backend:
          service:
            name: screeps
            port: 
              name: http
